
- pts-core: Add web-server-launcher support
- pts-core: Support starting HHVM as a web server
- pts-core: Startup speed optimizations
- pts-core: Cleaned up code error reporting/handling
- pts-core: Add server remote access and password options to user-config.xml user configuration options
- pts-core: Adjust handling of PTS OpenBenchmarking.org downloading of test profile order and hash handling
- pts-core: Random fixes

Phoronix Test Suite 4.8.6-Sokndal
10 December 2013

- pts-core: Print out pre/interim/post test script outputs when running in debug-run mode
- pts-core: DragonFlyBSD 3.6.0 support improvements
- pts-core: Support using DragonFlyBSD dports package management system for external dependencies
- pts-core: NO_FILE_HASH_CHECKS environment variable also doesn't enforce MD5/SHA256 checks on make-download-cache sub-command
- pts-core: Pass test arguments to pre/interim/post test profile scripts; ESET / Michal Zatloukal patch
- pts-core: Don't do dynamic test run counts when using system_monitor module
- pts-core: Support reading the full terminal width using stty as tput cols doesn't seem to report anything but 80 with shell_exec()
- pts-core: Add "tiff" external dependency for providing libtiff and header files
- pts-core: Don't offer to save test results when using debug-run mode
- phodevi: Support reading monitor vendor/model numbers when using the binary NVIDIA Linux driver, including recent versions
- phodevi: Improve multi-monitor resolution reporting when sharing an X.Org Server
- phodevi: Remove more useless compiler path argument reports
- toggle_screensaver: Auto unload module when no display server found

Phoronix Test Suite 4.8.5-Sokndal
22 November 2013

- pts-core: Improve formatting of interrupt messages with the (default) concise display mode
- pts-core: Don't remove test install files on installation failures
- pts-core: Allow download-test-files command to use OpenBenchmarking.org IDs